# python

./: README.md  requirements.txt  requirements_remote.txt
niwrap/: pyproject.toml
niwrap/src/niwrap/: __init__.py
niwrap_afni/: README.md  pyproject.toml
niwrap_ants/: README.md  pyproject.toml
niwrap_c3d/: README.md  pyproject.toml
niwrap_dcm2niix/: README.md  pyproject.toml
niwrap_fastsurfer/: README.md  pyproject.toml
niwrap_freesurfer/: README.md  pyproject.toml
niwrap_fsl/: README.md  pyproject.toml
niwrap_greedy/: README.md  pyproject.toml
niwrap_mrtrix/: README.md  pyproject.toml
niwrap_mrtrix/src/niwrap_mrtrix/mrtrix/: __init__.py  afdconnectivity.py  amp2response.py  amp2sh.py  connectome2tck.py  connectomeedit.py  connectomestats.py  dcmedit.py  dcminfo.py  dirflip.py  dirgen.py  dirmerge.py  dirorder.py  dirsplit.py  dirstat.py  dwi2adc.py  dwi2fod.py  dwi2mask.py  dwi2response.py  dwi2tensor.py  dwibiascorrect.py  dwidenoise.py  dwiextract.py  dwigradcheck.py  fixel2peaks.py  fixel2sh.py  fixel2tsf.py  fixel2voxel.py  fixelcfestats.py  fixelconnectivity.py  fixelconvert.py  fixelcorrespondence.py  fixelcrop.py  fixelfilter.py  fixelreorient.py  fod2dec.py  fod2fixel.py  label2colour.py  label2mesh.py  labelconvert.py  (+76 more)
niwrap_mrtrix3tissue/: README.md  pyproject.toml
niwrap_niftyreg/: README.md  pyproject.toml
niwrap_workbench/: README.md  pyproject.toml
symbolmaps/: afni.json  ants.json  c3d.json  dcm2niix.json  fastsurfer.json  freesurfer.json  fsl.json  greedy.json  index.json  mrtrix.json  mrtrix3tissue.json  niftyreg.json  (+1 more)
(+3714 files in other folders)
