[project]
name = "niwrap"
version = "0.7.0"
description = "Neuroimaging wrappers."
readme = "README.md"
license = "MIT"
authors = [{ name = "CMI DAIR" }]
requires-python = ">=3.10"
dependencies = [
  "styxdocker",
  "styxsingularity",
  "styxgraph",
  "niwrap_afni",
  "niwrap_ants",
  "niwrap_c3d",
  "niwrap_dcm2niix",
  "niwrap_fastsurfer",
  "niwrap_freesurfer",
  "niwrap_fsl",
  "niwrap_greedy",
  "niwrap_mrtrix",
  "niwrap_mrtrix3tissue",
  "niwrap_niftyreg",
  "niwrap_workbench",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"