[project]
name = "niwrap_mrtrix"
version = "0.7.0"
description = "Neuroimaging wrappers."
license = "MIT"
authors = [{ name = "CMI DAIR" }]
requires-python = ">=3.10"
dependencies = [
    "styxdefs>=0.5.0,<0.6.0"
]

[tool.uv.build-backend]
module-name = "niwrap_mrtrix.mrtrix"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"